[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
edition = "2021"
crate-type = ["lib"]

[[bin]]
name = "aoc2021"
path = "src/main.rs"

[dependencies]
bitvec = "0.22.3"
criterion = {version="0.3.5", features=["html_reports"]}
hex = "0.4.3"
itertools = "0.10.1"
nom = "7.1.0"


[[bench]]
name = "all"
harness = false

[dev-dependencies]
pretty_assertions = "1.0.0"
